--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
     margin: 15px auto;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
     background-color: black;
     color: white;
 }
