--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,8 @@ h1 {
 
 .main-content {
     display: grid;
-    height: 1000px;
-    /*background-color: blanchedalmond;*/
+    align-items: center;
+    justify-content: center;
 }
 
 .main-content img {
@@ -80,20 +80,38 @@ footer {
 
 article {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 15px;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 400px) {
+    body {
+        display: grid;
+        align-items: center;
+        justify-content: center;
+    }
+    p,
+    h1,
+    h2,
+    h3 {
+        padding: 50px;
+        /*background-color: blanchedalmond;
+        */
+        color: white;
+    }
     .ul {
         display: none;
     }
-    .main-content img {
+    /*.main-content img {
         height: 100px;
-        width: 100px;
+        width: 20px;
+    }*/
+    .main-content {
+        text-align: center;
     }
     article {
         display: grid;
         grid-template-columns: 1fr;
     }
+    #stefanos img {}
 }
